Edge Cases Api Product

--- a/utilities/properties.ini
+++ b/utilities/properties.ini
@@ -1,6 +1,7 @@
 [OPENCART_LOGIN]
 email = caioaza@gmail.com
 password = 123456
+first_name =
 
 [API]
 endpoint = https://opencart3-simple.api.opencart-api.com/api/rest
